Background image: fix #6 where new stacking context puts TOC behind page content

--- a/gadgets/BackgroundImage/style.less
+++ b/gadgets/BackgroundImage/style.less
@@ -55,11 +55,15 @@ body.skin-vector-2022.has-bg {
         backdrop-filter: blur(2px);
     }
 
-    /* Otherwise, the tools popup will not appear in front of the body content */
+    /* Otherwise, the tools/TOC popup will not appear in front of the body content */
     /* Happens due to backdrop-filter creating a new stacking context */
     .vector-page-toolbar {
         position: relative;
         z-index: 5;
+    }
+    .mw-body-header {
+        position: relative;
+        z-index: 6;
     }
 
     .vector-sticky-pinned-container::after {
